--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,9 @@
   --color-shadow: #9e9e9e;
   --color-header-detail-1: #80b9ff;
   --button-dark-detail: #000000;
+
+  --contrast1: #595959;
+  --contrast2: #ffffff;
 }
 
 .color-theme-night {
@@ -71,6 +74,9 @@
   --color-shadow: #666666;
   --color-header-detail-1: #103b70;
   --button-dark-detail: #000000;
+
+  --contrast1: #a6a6a6;
+  --contrast2: black;
 }
 
 /*-----------------------------------------------TEMPLATE LAYOUT-----------------------------------------------*/
@@ -311,6 +317,15 @@ a {
   border: 1.5px solid var(--color-gray);
 }
 
+.round-btn {
+  cursor: pointer;
+  padding: 3px 5px;
+  color: var(--font-color-1);
+  background-color: var(--color-white);
+  border: 1.6px groove var(--color-gray);
+  border-radius: 3vmin;
+}
+
 .nav-buttons {
   cursor: pointer;
   padding: 1px;
@@ -409,6 +424,16 @@ a {
   to {
     transform: rotate(135deg);
 
+  }
+}
+
+@keyframes flashy {
+  /* animation: flashy 850ms infinite cubic-bezier(0.01, .5, 0.5, 0.8); */
+  from {
+    background-color: var(--contrast1);
+  }
+  to {
+    background-color: var(--contrast2);
   }
 }
 
@@ -534,11 +559,17 @@ a {
      -webkit-box-shadow: 0px 0px 1px .5px var(--color-shadow);
              box-shadow: 0px 0px 1px .5px var(--color-shadow);
   }
+  .round-btn:hover {
+    animation: flashy 850ms infinite cubic-bezier(0.01, .5, 0.5, 0.8);
+  }
 }
 
 /*-----------------------------------------------CUSTOM CONTENT-----------------------------------------------*/
 
 /*-----------------------------------------------HOMEPAGE CONTENT-----------------------------------------------*/
+@media(hover: hover) and (pointer: fine) {
+}
+
 @media(min-width: 768px) {
   #homepage.page-content {
     padding-top: var(--below-header);
