--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@
 }
 
 .carousel-item {
-  padding: 0vmin 3vmin 3vmin 3vmin;
+  padding: 3vmin;
 }
 
 /*-----------------------------------------------ARROWS STYLE TEMPLATE-----------------------------------------------*/
@@ -317,7 +317,7 @@ a {
   border: 1.5px solid var(--color-gray);
 }
 
-.round-btn {
+.like-btn {
   cursor: pointer;
   padding: 3px 5px;
   color: var(--font-color-1);
@@ -502,7 +502,6 @@ a {
   }
   .carousel-item {
     width: var(--wide);
-    padding: 3vmin;
     border-radius: 40px;
     background: var(--color-white);
     border: 1.3px solid var(--color-gray);
@@ -559,7 +558,7 @@ a {
      -webkit-box-shadow: 0px 0px 1px .5px var(--color-shadow);
              box-shadow: 0px 0px 1px .5px var(--color-shadow);
   }
-  .round-btn:hover {
+  .like-btn:hover {
     animation: flashy 850ms infinite cubic-bezier(0.01, .5, 0.5, 0.8);
   }
 }
@@ -567,10 +566,15 @@ a {
 /*-----------------------------------------------CUSTOM CONTENT-----------------------------------------------*/
 
 /*-----------------------------------------------HOMEPAGE CONTENT-----------------------------------------------*/
-@media(hover: hover) and (pointer: fine) {
+
+.dashboard-container {
+  width: 220px;
 }
 
 @media(min-width: 768px) {
+  .dashboard-container {
+    width: 100%;
+  }
   #homepage.page-content {
     padding-top: var(--below-header);
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
