--- a/src/App.css
+++ b/src/App.css
@@ -467,6 +467,43 @@ a {
   color: var(--font-color-1);
 }
 
+/*-----------------------------------------------COMPONENTS-----------------------------------------------*/
+
+/*-----------------------------------------------CAROUSEL-----------------------------------------------*/
+@media(min-width: 768px) {
+  .carousel-container {
+    --wide: 100%;
+    overflow: hidden;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .projects-carousel {
+    position: relative;
+    transition: right 300ms ease-in;
+    width: calc(3 * var(--wide));
+    display: flex;
+  }
+  .carousel-item {
+    width: var(--wide);
+  }
+  .carPos0 {
+    right: calc(0 * var(--wide));
+  }
+  .carPos1 {
+    right: calc(1 * var(--wide));
+  }
+  .carPos2 {
+    right: calc(2 * var(--wide));
+  }
+  .carButs button {
+    height: 25%;
+    width: calc(30% / 3);
+    margin: 15px 5px;
+  }
+}
+
 /*-----------------------------------------------QUERIES-----------------------------------------------*/
 
 /*-----------------------------------------------RESPONSIVITY-----------------------------------------------*/
@@ -494,39 +531,6 @@ a {
     -moz-box-box-shadow: 0px 0px 2px .1px var(--color-shadow);
     -webkit-box-shadow: 0px 0px 2px .1px var(--color-shadow);
     box-shadow: 0px 0px 2px .1px var(--color-shadow);
-  }
-  /* Carousel */
-  .carousel-container {
-    --wide: 100%;
-    overflow: hidden;
-  }
-  .projects-carousel {
-    position: relative;
-    transition: right 300ms ease-in;
-    width: calc(3 * var(--wide));
-    display: flex;
-  }
-  .carousel-item {
-    width: var(--wide);
-    border-radius: 40px;
-    background: var(--color-white);
-    border: 1.3px solid var(--color-gray);
-  }
-  .carPos0 {
-    right: calc(0 * var(--wide));
-    background-color: var(--color-gray);
-  }
-  .carPos1 {
-    right: calc(1 * var(--wide));
-    background-color: var(--color-gray);
-  }
-  .carPos2 {
-    right: calc(2 * var(--wide));
-    background-color: var(--color-gray);
-  }
-  .carButs button {
-    width: calc(30% / 3);
-    margin: 15px 5px;
   }
 }
 
@@ -615,7 +619,4 @@ a {
     display: grid;
     grid-template-columns: 1fr 2.9fr;
   }
-  /* .carousel-container {
-    width: 60vw;
-  } */
 }
