--- a/src/App.css
+++ b/src/App.css
@@ -496,10 +496,10 @@ a {
   }
   .carousel-item {
     width: var(--wide);
-    margin-left: .1%;
-    -moz-box-shadow: -1px -2px 1px 1px var(--color-gray);
-    -webkit-box-shadow: -1px -2px 1px 1px var(--color-gray);
-    box-shadow: -2px -2px 1px 0px var(--color-gray);
+    margin-left: 1%;
+    -moz-box-shadow: -.1vw -1vw 0vw 0vw var(--color-gray);
+    -webkit-box-shadow: -.1vw -1vw 0vw 0vw var(--color-gray);
+    box-shadow: -.1vw -1vw 0vw 0vw var(--color-gray);
   }
   .carPos0 {
     right: calc(0 * var(--wide));
