--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@
 /* QUERIES */
   /* RESPONSIVITY */
   /* INTERACTIVITY */
+    /* SCROLL-BEHAVIOR */
+    /* HOVER-EFFECTS */
 /* CUSTOM CONTENT */
   /* HOMEPAGE CONTENT*/
 
@@ -562,6 +564,13 @@ a {
 }
 
 /*-----------------------------------------------INTERACTIVITY-----------------------------------------------*/
+
+/*-----------------------------------------------SCROLL-BEHAVIOR-----------------------------------------------*/
+html {
+  scroll-behavior: smooth;
+}
+
+/*-----------------------------------------------HOVER-EFFECTS-----------------------------------------------*/
 @media(hover: hover) and (pointer: fine) {
   .buttons:hover {
     background-color: var(--color-gray);
